--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
  </head>
  <body>
      <header>
-     <h1>Your Name Goes Here</h1>
+     <h1>Cassie Clark's Portal page</h1>
         <nav class="topnav" id="myTopnav">
             <a href="index.html" class="active">Home</a>
-            <a href="#" target="_blank">Name of project goes here</a>
+            <a href="https://docs.google.com/document/d/1NGcbbNEefQA1RGte5b19t8esg6XSKNRFLsc8bB-Sff8/edit?usp=sharing" target="_blank">Week 8 Class Exercises</a>
             <a href="#" target="_blank">Name of project goes here</a>
             <a href="#" target="_blank">Name of project goes here</a>
             <a href="#" target="_blank">GitHub</a>
