Adds first link to class assignment

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
  <head>
-     <title>(Your Name Here): Responsive Website</title>
+     <title>(Cassie Clark): Responsive Website</title>
   <meta charset="utf-8" />
   <meta name="robots" content="noindex,nofollow" />
   <meta name="viewport" content="width=device-width" />
@@ -11,10 +11,10 @@
  </head>
  <body>
      <header>
-     <h1>Your Name Goes Here</h1>
+     <h1>Cassie Clark</h1>
         <nav class="topnav" id="myTopnav">
             <a href="index.html" class="active">Home</a>
-            <a href="#" target="_blank">Name of project goes here</a>
+            <a href="https://mchen162.github.io/it115-github-webpage-project/" target="_blank">GitHub Web Page Group Project</a>
             <a href="#" target="_blank">Name of project goes here</a>
             <a href="#" target="_blank">Name of project goes here</a>
             <a href="#" target="_blank">GitHub</a>
