Adds second link to class assignment

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav class="topnav" id="myTopnav">
             <a href="index.html" class="active">Home</a>
             <a href="https://mchen162.github.io/it115-github-webpage-project/" target="_blank">GitHub Web Page Group Project</a>
-            <a href="#" target="_blank">Name of project goes here</a>
+            <a href="https://clarkcassie7765.wixsite.com/softwaredev" target="_blank">Software Developer Portfolio Template</a>
             <a href="#" target="_blank">Name of project goes here</a>
             <a href="#" target="_blank">GitHub</a>
             <a href="#" target="_blank">LinkedIn</a>
