--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <picture class="profile">
             <source media="(min-width: 1200px)" srcset="images/desktop.jpg">
             <source media="(min-width: 501px)" srcset="images/tablet.jpg">
-            <img src="images/phone.jpg" alt="That's me!" />
+            <img src="images/cassie.jpg" alt="That's me!" />
         </picture>   
        <h2 class="subheader">About Me (change mafe in main)</h2>
        
