--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
    <main class="wrapper">
    
         <picture class="profile">
-            <source media="(min-width: 1200px)" srcset="images/desktop.jpg">
-            <source media="(min-width: 501px)" srcset="images/tablet.jpg">
+            <source media="(min-width: 1200px)" srcset="images/cassie.jpg">
+            <source media="(min-width: 501px)" srcset="images/cassie.jpg">
             <img src="images/cassie.jpg" alt="That's me!" />
         </picture>   
        <h2 class="subheader">About Me (change mafe in main)</h2>
