--- a/index.html
+++ b/index.html
@@ -40,14 +40,10 @@
        
        <p>I hope that upon completion of this program I am able to find a position that allows me to harness these new skills while allowing me to continue learning, growing and adding to my tool belt.</p>
 
-       <h3>Page Origin</h3>
+       <h3>Check Out my Work</h3>
 
-       <p>The HTML/CSS comes from Sara Newman's WEB110 class as taught at Seattle Central. This page provides a basis for students to build a responsive portal page.</p>
+       <p>Above are the link to some of the work I've done in the program so far.  Feel free to check them out!</p>
 
-       <p>Study how this page is built, and use it as a foundation for your portal or other sites!</p>
-       
-       <p>Copyright [2014-2021] [<a href="http://newmanix.com/sara.php">Sara Newman</a>]. Licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0" target="_blank">Apache License, Version 2.0</a>
-        </p>
 
      <footer>
       <p><small>&copy; 2021 by <a href="contact.php">Contact (Your Name Here) </a>, All Rights Reserved ~ </small></p>
