--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a href="https://mchen162.github.io/it115-github-webpage-project/" target="_blank">GitHub Web Page Group Project</a>
             <a href="https://clarkcassie7765.wixsite.com/softwaredev" target="_blank">Software Developer Portfolio Template</a>
             <a href="file:///C:/Users/clark/Downloads/Ad-hoc%20Committee%20Report%20Beta%20Final.pdf" target="_blank">Ad-hoc Commitee Report</a>
-            <a href="#" target="_blank">GitHub</a>
+            <a href="https://github.com/ClarkCassie" target="_blank">GitHub</a>
             <a href="#" target="_blank">LinkedIn</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
         </nav>
