--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
      <h1>Cassie Clark</h1>
         <nav class="topnav" id="myTopnav">
             <a href="index.html" class="active">Home</a>
-            <a href="file:///C:/Users/clark/OneDrive%20-%20Year%20Up/Documents/Github/daily-grind/index.html" target="_blank">Daily Grind Web Page</a>
+            <a href="https://clarkcassie.github.io/daily-grind/" target="_blank">Daily Grind Web Page</a>
             <a href="https://clarkcassie.github.io/time-of-day-CCLARK/" target="_blank">Time of Day Project</a>
             <a href="https://mchen162.github.io/it115-github-webpage-project/" target="_blank">GitHub Web Page Group Project</a>
             <a href="https://clarkcassie7765.wixsite.com/softwaredev" target="_blank">Software Developer Portfolio Template</a>
