--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
      <h1>Cassie Clark</h1>
         <nav class="topnav" id="myTopnav">
          <a href="index.html" class="active">Home</a>
+            <a href="https://video-game-web-service.clarkcassie.repl.co/" target="_blank">Video Game Web Services</a>
             <a href="https://clarkcassie.github.io/seasonal-styles/" target="_blank">Seasonal Styles</a>
             <a href="https://clarkcassie.github.io/dom-play/" target="_blank">Dom Play Project</a>
             <a href="https://clarkcassie.github.io/daily-grind/" target="_blank">Daily Grind Web Page</a>
